test/libyul/yulSyntaxTests/objects/empty_object.yul
object "A" {
}
// ----
// ParserError 4846: (13-14): Expected keyword "code".
